--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "type": "module",
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
+    "papaparse": "^5.3.2",
     "yargs": "^17.6.2"
   }
 }
